--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,9 @@
     "builds": [
       {
         "src": "index.js",
-        "use": "@vercel/node"
+        "use": "@now/node"
       }
     ],
-    "env": {
-      "NODE_ENV": "production"
-    },
     "routes":[
       {
         "src": "/(.*)",
